redirect angular to angular

--- a/web.config
+++ b/web.config
@@ -4,15 +4,19 @@
     <rewrite>
       <rules>
         <clear />
-        <rule name="TransferToPublic" stopProcessing="true">
-          <match url="^(app|assets|css|fonts|images|js|packages|favicon.ico)(.*)$" />
-          <action type="Rewrite" url="public/{R:0}" />
-        </rule>
         <rule name="Rewrite requested file/folder to index.php" stopProcessing="true">
-          <match url="^(.*)$" ignoreCase="false" />
+          <match url="^v1/(.*)$" ignoreCase="false" />
           <action type="Rewrite" url="public/index.php/{R:0}" appendQueryString="true" />
         </rule>
+        <rule name="Rewrite to angular cli" stopProcessing="true">
+          <match url="^(.*)$" ignoreCase="false" />
+          <conditions logicalGrouping="MatchAll">
+            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          </conditions>
+          <action type="Rewrite" url="/frontend/" />
+        </rule>
       </rules>
-    </rewrite> 
+    </rewrite>
   </system.webServer>
 </configuration>
