added frontend as submodule

--- a/web.config
+++ b/web.config
@@ -14,7 +14,7 @@
             <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
             <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
           </conditions>
-          <action type="Rewrite" url="/frontend/" />
+          <action type="Rewrite" url="frases-sc.web-front/" />
         </rule>
       </rules>
     </rewrite>
