--- a/web.config
+++ b/web.config
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".json" mimeType="application/json" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+    </staticContent>
     <rewrite>
       <rules>
         <clear />
-        <rule name="Rewrite requested file/folder to index.php" stopProcessing="true">
-          <match url="^v1/(.*)$" ignoreCase="false" />
-          <action type="Rewrite" url="public/index.php/{R:0}" appendQueryString="true" />
+        <rule name="TransferToPublic" stopProcessing="true">
+          <match url="^(app|assets|css|fonts|images|js|packages|favicon.ico)(.*)$" />
+          <action type="Rewrite" url="front/{R:0}" />
         </rule>
-        <rule name="Rewrite to angular cli" stopProcessing="true">
-          <match url="^(.*)$" ignoreCase="false" />
+        <rule name="AngularJS" stopProcessing="true">
+          <match url="^(?!.*(.bundle.js|.bundle.map|.bundle.js.gz|.bundle.css|.bundle.css.gz|.png|.jpg|.ico)).*$" />
+          <conditions logicalGrouping="MatchAll"></conditions>
+          <action type="Rewrite" url="front/" appendQueryString="true" />
+        </rule>
+        <rule name="TransferToPublic2" stopProcessing="true">
+          <match url="^(.*)$" />
           <conditions logicalGrouping="MatchAll">
-            <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-            <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+            <add input="{REQUEST_URI}" pattern="^/(v1)" negate="true" />
           </conditions>
-          <action type="Rewrite" url="front/" />
+          <action type="Rewrite" url="front/{R:0}" />
+        </rule>
+        <rule name="Rewrite requested file/folder to index.php" stopProcessing="true">
+          <match url="^(.*)$" ignoreCase="false" />
+          <action type="Rewrite" url="public/index.php/{R:0}" appendQueryString="true" />
         </rule>
       </rules>
     </rewrite>
