--- a/web.config
+++ b/web.config
@@ -5,6 +5,7 @@
       <mimeMap fileExtension=".json" mimeType="application/json" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
       <mimeMap fileExtension=".woff2" mimeType="font/woff2" />
+      <mimeMap fileExtension=".otf" mimeType="font/opentype" />
     </staticContent>
     <rewrite>
       <rules>
