--- a/web.config
+++ b/web.config
@@ -14,6 +14,10 @@
           <match url="^(app|assets|css|fonts|images|js|packages|favicon.ico)(.*)$" />
           <action type="Rewrite" url="front/{R:0}" />
         </rule>
+        <rule name="Rewrite to CDN">
+          <match url="^assets/fonts/(.+)$" />
+          <action type="Rewrite" url="https://pulpo.blob.core.windows.net/frasessc/{R:0}" />
+        </rule>
         <rule name="AngularJS" stopProcessing="true">
           <match url="^(?!.*(.bundle.js|.bundle.map|.bundle.js.gz|.bundle.css|.bundle.css.gz|.png|.jpg|.ico)).*$" />
           <conditions logicalGrouping="MatchAll"></conditions>
